--- a/src/screens/contact/contact.module.css
+++ b/src/screens/contact/contact.module.css
@@ -52,13 +52,10 @@
 	gap: 3px;
 }
 
-.envelope {
-	margin-top: -3px;
-}
-
 .left_side a {
 	font-size: 18px;
 	font-weight: bold;
+	font-family: var(--roboto-font);
 }
 
 .left_side a:hover {
@@ -77,6 +74,8 @@
 	flex-direction: column;
 	gap: 3px;
 	font-size: 15px;
+	font-weight: bold;
+	font-family: var(--roboto-font);
 
 	color: #ff0000 !important;
 }
@@ -155,6 +154,11 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
+	}
+
+	.right_side input,
+	.right_side textarea {
+		width: 96%;
 	}
 }
 
