--- a/src/screens/projects/projects.module.css
+++ b/src/screens/projects/projects.module.css
@@ -21,10 +21,17 @@
 	color: black;
 	font-weight: bold;
 	margin-top: 8px;
+	font-family: var(--roboto-condensed-font);
 }
 
 @media screen and (max-height: 500px) {
 	.main {
 		height: 140vh !important;
+	}
+}
+
+@media screen and (max-width: 800px) {
+	.main p {
+		font-size: 40px;
 	}
 }
